--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
+    "dotenv": "^17.3.1",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.0.0",
