--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^8.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "@types/node": "^20.19.33",
     "axios": "^1.13.5",
