--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,14 +17,18 @@
     "@supabase/supabase-js": "^2.95.3",
     "@types/node": "^20.19.33",
     "axios": "^1.13.5",
+    "buffer": "^6.0.3",
+    "micro": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "stripe": "^20.3.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.28",
     "@types/react-dom": "^18.3.7",
+    "@vercel/node": "^5.6.7",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^9.10.0",
     "typescript": "^5.3.3",
